; ModuleID = '/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_wlan.c_wlan_ioctl_del_profile.c'
source_filename = "/home/carl/AnghaBench/micropython/drivers/cc3000/src/extr_wlan.c_wlan_ioctl_del_profile.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@tSLInformation = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@HEADERS_SIZE_CMD = common dso_local global i32 0, align 4
@EFAIL = common dso_local global i32 0, align 4
@HCI_CMND_WLAN_IOCTL_DEL_PROFILE = common dso_local global i32 0, align 4
@WLAN_DEL_PROFILE_PARAMS_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @wlan_ioctl_del_profile(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %6 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @tSLInformation, i32 0, i32 0), align 8
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = load i32, i32* @HEADERS_SIZE_CMD, align 4
  %9 = sext i32 %8 to i64
  %10 = getelementptr inbounds i32, i32* %7, i64 %9
  store i32* %10, i32** %5, align 8
  %11 = load i32*, i32** %5, align 8
  %12 = load i32, i32* %2, align 4
  %13 = call i32* @UINT32_TO_STREAM(i32* %11, i32 %12)
  store i32* %13, i32** %5, align 8
  %14 = load i32, i32* @EFAIL, align 4
  store i32 %14, i32* %3, align 4
  %15 = load i32, i32* @HCI_CMND_WLAN_IOCTL_DEL_PROFILE, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = load i32, i32* @WLAN_DEL_PROFILE_PARAMS_LEN, align 4
  %18 = call i32 @hci_command_send(i32 %15, i32* %16, i32 %17)
  %19 = load i32, i32* @HCI_CMND_WLAN_IOCTL_DEL_PROFILE, align 4
  %20 = call i32 @SimpleLinkWaitEvent(i32 %19, i32* %3)
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}

declare dso_local i32* @UINT32_TO_STREAM(i32*, i32) #1

declare dso_local i32 @hci_command_send(i32, i32*, i32) #1

declare dso_local i32 @SimpleLinkWaitEvent(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
